--- a/stories/styles.css
+++ b/stories/styles.css
@@ -1,10 +1,19 @@
-html, body, #root, #root > div {
-    height: 100%;
-    margin: 0;
-    padding: 10px;
-    box-sizing: border-box;
-  }
+html,
+body,
+#root,
+#root>div {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 10px;
+  height: 100%;
+}
 
-#root > div {
-    padding: 0px;
-}  
+#root>div {
+  padding: 0px;
+}
+
+.rnd-resizable1 .resize-handle-base-class {
+  border: 1px solid #25A7FB;
+  border-radius: 50%;
+  background-color: #fff;
+}
