--- a/stories/styles.css
+++ b/stories/styles.css
@@ -17,3 +17,26 @@ body,
   border-radius: 50%;
   background-color: #fff;
 }
+
+.guide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  background: hsl(205, 100%, 75%);
+  color: hsl(205, 100%, 75%);
+}
+
+.guide.axis-x {
+  width: 1px;
+  height: 100%;
+}
+
+.guide.axis-y {
+  width: 100%;
+  height: 1px;
+}
+
+.react-draggable {
+  outline: none;
+}
